--- a/src/styling/home.css
+++ b/src/styling/home.css
@@ -1,38 +1,173 @@
-.App {
-  text-align: center;
+/*CONTAINERS*/
+.root-container {
+  width: 100%;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.nav-bar {
+  position: sticky;
+  top: 0;
+  left: 0;
+
+  width: 100%;
+  height: 100px;
+
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+
+  transition: color 0.5s linear;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.hero-container {
+  width: 100%;
+  height: 120vh;
+
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  overflow: hidden;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.bio-container {
+  width: 100%;
+  margin-top: 15vh;
+
   display: flex;
   flex-direction: column;
-  align-items: center;
+
+  transition: color 0.5s linear;
+}
+
+.headline {
+  margin: 5vw;
+  align-self: center;
+}
+
+.bio {
+  margin: 5vw;
+  margin-top: 0;
+  width: 60vw;
+  align-self: flex-end;
+}
+
+.projects-wrapper {
+  width: 60vw
+}
+
+.projects-headline {
+  margin: 0;
+}
+
+.projects-container {
+  margin-top: 15vh;
+  margin-bottom: 15vh;
+  width: 100%;
+
+  display: flex;
+  flex-direction: column;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-content: center;
+  align-items: center;
+
+  transition: color 0.5s linear;
 }
 
-.App-link {
-  color: #61dafb;
+.project-link {
+  width: 100%;
+  overflow: hidden;
+  position: relative;
+  display: inline-block;
+  margin-top: 50px;
+  margin-bottom: 50px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.project-link::before,
+.project-link::after {
+ content: '';
+  position: absolute;
+  width: 100%;
+  left: 0;
+}
+
+.project-link::after {
+  content: attr(data-replace);
+  height: 100%;
+  top: 0;
+  transform-origin: 100% 50%;
+  transform: translate3d(200%, 0, 0);
+  transition: transform .3s cubic-bezier(0.76, 0, 0.24, 1);
+}
+
+.project-link:hover::before {
+  transform-origin: 0% 50%;
+  transform: scaleX(1);
+}
+
+.project-link:hover::after {
+  transform: translate3d(0, 0, 0);
+}
+
+.project-link span {
+  display: inline-block;
+  transition: transform .3s cubic-bezier(0.76, 0, 0.24, 1);
+}
+
+.project-link:hover span {
+  transform: translate3d(-200%, 0, 0);
+}
+
+.divider {
+  width: 100%;
+  height: .5px;
+  background-color: white;
+}
+
+@media (max-width: 950px) {
+  .headline {
+    font-size: 13vw;
   }
-  to {
-    transform: rotate(360deg);
+  
+  .bio {
+    width: 90vw;
+    align-self: center;
+    font-size: 5vw;
   }
+
+  .projects-wrapper {
+    width: 80vw;
+  }
+
+  .projects-headline {
+    font-size: 9vw;
+  }
+
+  .project-link {
+    font-size: 4.25vw;
+  }
+}
+
+@media (max-width: 550px) {
+  .headline {
+    font-size: 17vw;
+  }
+  
+  .bio {
+    font-size: 7vw;
+  }
+
+  .project-link {
+    margin-top: 30px;
+    margin-bottom: 30px;
+  }
+}
+
+/*PICTURES*/
+.pic-profile {
+  max-height: 100vh;
+
+  position: absolute;
+  bottom: 0;
+  left: auto;
 }
