--- a/src/styling/index.css
+++ b/src/styling/index.css
@@ -1,13 +1,48 @@
+@import url("https://use.typekit.net/vny5dfi.css");
+
 body {
   margin: 0;
+  padding: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: white;
+  transition: background-color 0.5s linear;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+h1 {
+  font-family: garamond-premier-pro, serif;
+  font-weight: 400;
+  font-style: normal;
+  font-size: 15vw;
+}
+
+h2 {
+  font-family: garamond-premier-pro, serif;
+  font-weight: 400;
+  font-style: normal;
+  font-size: 7vw;
+}
+
+h3 {
+  font-family: garamond-premier-pro, serif;
+  font-weight: 400;
+  font-style: normal;
+  font-size: 5vw;
+}
+
+h4 {
+  font-family: garamond-premier-pro, serif;
+  font-weight: 400;
+  font-style: normal;
+  font-size: 3vw;
+}
+
+p {
+  font-family: garamond-premier-pro, serif;
+  font-weight: 400;
+  font-style: normal;
+  font-size: 3vw;
 }
